feat: 네이버 뉴스 api 비었을 경우 예외 처리 추가